Fixing h1 size on mobile

--- a/files/style.css
+++ b/files/style.css
@@ -260,6 +260,6 @@ video, .thumbnail {
 
 @media screen and (max-width: 480px) {
     h1 {
-        font-size: 4.8vw;
+        font-size: 4.7vw;
     }
 }
